<resources>
    <string name="app_name">Peer</string>
    <string name="parse_app_id" translatable="false">hFyJ3QxrARb3j64sXwXwp49s5QFolaYJCmtPZaGU</string>
    <string name="parse_client_key" translatable="false">K4qm3Xnahm6WvMNToVJRJLr346rPVHnmTK4ktyKB</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>
    <string name="locating">Locating...</string>
    <string name="smaller_image_alert">Please choose a smaller image.</string>


    <string name="empty">There are no todo items.</string>
    <string name="action_insert">Ask for help</string>
    <string name="action_me">Me</string>
    <string name="action_logout">Log Out</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_claim">I can help!</string>
    <string name="action_locate">Locate</string>


    <string name="name" translatable="false">Enter your todo</string>
    <string name="confirm">Done</string>
    <string name="create_todo">Create Todo</string>
    <string name="new_favor">New Favor</string>
    <string name="edit_profile">New Favor</string>
    <string name="view_favor">Favor</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_sign_up">Password(6-16 alpha/numbers)</string>
    <string name="prompt_name">Your name</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="prompt_bio">Introduce yourself</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="title_activity_location" translatable="false">LocationActivity</string>
    <string name="startlocation">Start locating</string>
    <string name="stoplocation">Stop locating</string>
    <string name="hight_accuracy_desc" translatable="false">High Accuracy</string>
    <string name="saving_battery_desc" translatable="false">Saving battery</string>
    <string name="device_sensor_desc">Device sensor</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>

    <string name="create_favor_title">Favor Title</string>
    <string name="create_favor_where">Location</string>
    <string name="create_favor_description">Description</string>
    <string name="create_favor_choose_date"><u>Date</u></string>
    <string name="create_favor_choose_time"><u>Time</u></string>
    <string name="create_favor_back_alert_title">Cancel</string>
    <string name="create_favor_back_alert_content">Are you sure to leave?</string>

    <string name="view_favor_action_help">This task is waiting for a volunteer.\nI can help!</string>
    <string name="view_favor_hint_claim_conflict">Sorry, this task has been claimed by others.</string>
    <string name="view_favor_hint_after_claim">Now please call your peer and complete this task by %s.</string>
    <string-array name="view_favor_status_array">
        <item>WAITING</item>
        <item>CLAIMED</item>
        <item>COMPLETED</item>
        <item>TIMEOUT</item>
    </string-array>

    <string name="view_user_name_title">Name:</string>
    <string name="view_user_bio_title">Bio:</string>
    <string name="view_user_phone_title">Phone:</string>
    <string name="view_user_birthday_title">Birthday:</string>
    <string name="view_user_name">Your name.</string>
    <string name="view_user_bio">Say something to introduce yourself.</string>
    <string name="view_user_phone">Your phone number.</string>
    <string name="view_user_birthday">Your birthday.</string>

    <string name="title_activity_favor" translatable="false">FavorActivity</string>


    <string name="title_section_nearby">Nearby</string>
    <string name="title_section_inbox">Inbox</string>
    <string name="title_section_outbox">Outbox</string>

    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>

    <string name="favor_form_invalid_toast_title">Sorry, your title should not be empty.</string>
    <string name="favor_form_invalid_toast_description">Sorry, your description should not be empty.</string>
    <string name="favor_form_invalid_toast_location">Sorry, your location should not be empty.</string>
    <string name="favor_form_invalid_toast_time">Sorry, the due time should be at least 10 minutes from now.</string>


    <string name="location_button">Locate</string>
    <string name="location_default_address">上海市邯郸路220号</string>
    <string name="location_success">Success</string>
    <string name="location_no_result">Sorry, no result!</string>

    <string name="default_bio">The guy is too lazy to leave a bio.</string>
    <string name="distance_suffix">m away</string>
    <string name="favor_item_from_user">From: %s</string>

    <string name="invalid_phone_number">Invalid Phone Number!</string>
    <string name="invalid_password">Invalid Password!</string>
    <string name="empty_outbox_hint">Click \"+\" to ask a favor!</string>
    <string name="empty_nearby_hint">No favors yet.</string>
    <string name="empty_inbox_hint">Find some WAITING tasks to give someone a favor!</string>
</resources>
