<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/White"
        android:theme="@android:style/Theme.Light">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_profile_image_board_height"
            android:background="@drawable/user_profile_photo_background">
            <com.parse.ParseImageView
                android:id="@+id/photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/default_profile"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_user_name_title"
                android:layout_weight="3"
                android:singleLine="true"
                android:inputType="textAutoCorrect" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/view_user_name"
                android:layout_weight="1"
                android:singleLine="true"
                android:inputType="textAutoCorrect" />
        </LinearLayout>

        <include layout="@layout/divider"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_user_bio_title"
                android:layout_weight="3"
                android:singleLine="true"
                android:inputType="textAutoCorrect" />

            <TextView
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:gravity="top"
                android:lines="20"
                android:minLines="10"
                android:inputType="textAutoCorrect" />
        </LinearLayout>

        <include layout="@layout/divider"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_user_birthday_title"
                android:layout_weight="3"
                android:singleLine="true"
                android:inputType="textAutoCorrect" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:gravity="top"
                android:lines="20"
                android:minLines="10"
                android:inputType="textAutoCorrect" />
        </LinearLayout>

        <include layout="@layout/divider"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"></include>

    </LinearLayout>

    <ImageView
        android:id="@+id/phone"
        android:layout_width="@+dimen/dial_button_diameter"
        android:layout_height="@+dimen/dial_button_diameter"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/form_margin"
        android:src="@drawable/ic_action_phone_start"
        android:background="@drawable/circle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>